<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/drawer_Layout"
    tools:context=".FragmentTelaPaciente">

    <!--Conteudo principal-->
    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:id="@+id/coordinator_Layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:padding="4dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:src="@drawable/ic_dr_piu"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Dra. Maria Souza"
                android:layout_marginStart="25dp"
                android:textSize="18sp"
                android:textStyle="bold"/>

        </com.google.android.material.appbar.MaterialToolbar>


        <LinearLayout
            android:id="@+id/linear_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <View
                android:id="@+id/viewlinha"
                android:layout_width="match_parent"
                android:layout_height="5dp"
                android:background="@color/black"
                app:layout_anchor="@+id/toolbar"
                app:layout_anchorGravity="bottom|center"
                android:layout_marginTop="?attr/actionBarSize"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="200dp">

                <androidx.cardview.widget.CardView
                    android:id="@+id/cardviewConsulta"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="24dp"
                    android:layout_marginEnd="24dp"
                    android:layout_marginTop="24dp"
                    app:cardCornerRadius="20dp"
                    app:cardElevation="10dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/viewlinha">


                    <LinearLayout
                        android:id="@+id/linearlayoutAVISOCONSULTA"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">


                        <TextView
                            android:id="@+id/textview1"
                            android:layout_width="match_parent"
                            android:layout_height="50dp"
                            android:text="Próxima consulta"
                            android:textStyle="bold"
                            android:textColor="@color/black"
                            android:gravity="center_vertical"
                            android:paddingStart="16dp"
                            android:background="@color/white"/>


                        <TextView
                            android:id="@+id/textview2"
                            android:layout_width="match_parent"
                            android:layout_height="50dp"
                            android:text="Ashley Gabriela"
                            android:textColor="@color/black"
                            android:gravity="center_vertical"
                            android:paddingStart="16dp"
                            android:background="@color/white"/>


                        <TextView
                            android:id="@+id/textview3"
                            android:layout_width="match_parent"
                            android:layout_height="50dp"
                            android:text="8:00 • consulta presencial"
                            android:fontFamily="sans-serif-light"
                            android:textColor="@color/black"
                            android:gravity="center_vertical"
                            android:paddingStart="16dp"
                            android:background="@color/white"/>
                    </LinearLayout>


                </androidx.cardview.widget.CardView>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="200dp">

                <androidx.cardview.widget.CardView
                    android:id="@+id/cardviewAGENDA"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="54dp"
                    android:layout_marginEnd="54dp"
                    app:cardElevation="5dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="1.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/view_top_line">


                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">


                        <TextView
                            android:id="@+id/textview5"
                            android:layout_width="match_parent"
                            android:layout_height="50dp"
                            android:background="@color/white"
                            android:gravity="center_vertical"
                            android:paddingStart="16dp"
                            android:text="@string/texto_formatado_Leticia"
                            android:textColor="@color/black" />


                        <TextView
                            android:id="@+id/textview6"
                            android:layout_width="match_parent"
                            android:layout_height="50dp"
                            android:background="@color/white"
                            android:gravity="center_vertical"
                            android:paddingStart="16dp"
                            android:text="@string/texto_formatado_Alex"
                            android:textColor="@color/black" />


                        <TextView
                            android:id="@+id/textview7"
                            android:layout_width="match_parent"
                            android:layout_height="50dp"
                            android:background="@color/white"
                            android:gravity="center_vertical"
                            android:paddingStart="16dp"
                            android:text="@string/texto_formatado_Annelise"
                            android:textColor="@color/black" />


                        <TextView
                            android:id="@+id/textview8"
                            android:layout_width="match_parent"
                            android:layout_height="50dp"
                            android:background="@color/white"
                            android:gravity="center_vertical"
                            android:paddingStart="16dp"
                            android:text="@string/texto_formatado_Adylla"
                            android:textColor="@color/black" />


                    </LinearLayout>


                </androidx.cardview.widget.CardView>


            </LinearLayout>


            <TextView
                android:id="@+id/textView_Categorias"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Categorias"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:textStyle="bold"
                android:layout_marginTop="50dp"
                android:layout_marginStart="40dp"
                android:layout_marginEnd="40dp"/>

            <LinearLayout
                android:id="@+id/linearLayout_cards"
                android:layout_width="match_parent"
                android:layout_height="140dp"
                app:layout_constraintTop_toBottomOf="@+id/textView_Categorias"
                android:layout_marginTop="10dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:orientation="horizontal"
                android:gravity="center">

                <androidx.cardview.widget.CardView
                    android:id="@+id/botaofluante"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:backgroundTint="@color/color_details"
                    app:cardCornerRadius="10dp"
                    app:cardElevation="8dp"
                    android:clickable="true"
                    android:focusable="true">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:orientation="vertical">

                        <ImageView
                            android:id="@+id/Imagediario"
                            android:layout_width="match_parent"
                            android:layout_height="50dp"
                            android:clickable="true"
                            android:contentDescription="botão que encaminha para diário"
                            android:focusable="true"
                            android:src="@drawable/icone_pacientes"
                            android:layout_marginTop="10dp"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />

                        <TextView
                            android:id="@+id/textView_diario"
                            android:layout_width="match_parent"
                            android:layout_height="20dp"
                            android:layout_marginTop="5dp"
                            android:text="Pacientes"
                            android:textColor="@color/black"
                            android:textStyle="bold"
                            android:textSize="16sp"
                            android:textAlignment="center"/>

                    </LinearLayout>

                </androidx.cardview.widget.CardView>


                <androidx.cardview.widget.CardView
                    android:id="@+id/cardView_agenda"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:backgroundTint="@color/color_details"
                    app:cardCornerRadius="10dp"
                    app:cardElevation="8dp"
                    android:clickable="true"
                    android:focusable="true"
                    android:layout_marginStart="50dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:orientation="vertical">

                        <ImageView
                            android:id="@+id/imageView_agenda"
                            android:layout_width="match_parent"
                            android:layout_height="50dp"
                            android:clickable="true"
                            android:contentDescription="botão que encaminha para diário"
                            android:focusable="true"
                            android:src="@drawable/ic_agendamento"
                            android:layout_marginTop="10dp"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />

                        <TextView
                            android:id="@+id/textView_agenda"
                            android:layout_width="match_parent"
                            android:layout_height="20dp"
                            android:layout_marginTop="5dp"
                            android:text="Agenda"
                            android:textColor="@color/black"
                            android:textStyle="bold"
                            android:textSize="16sp"
                            android:textAlignment="center"/>

                    </LinearLayout>

                </androidx.cardview.widget.CardView>

            </LinearLayout>


        </LinearLayout>


    </androidx.coordinatorlayout.widget.CoordinatorLayout>

    <com.google.android.material.navigation.NavigationView
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:id="@+id/naview"
        app:menu="@menu/nav_menu"
        app:headerLayout="@layout/nav_header"
        android:fitsSystemWindows="true"
        android:layout_gravity="start"
        android:layout_marginTop="?attr/actionBarSize"/>

</androidx.drawerlayout.widget.DrawerLayout>